refactor(test): use UserType builder once
This commit continues to use the externalised builder method.

TIS21-7753: Upgrade AWS SDK v1->v2